<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="prompt_fsusername">FamilySearch Username</string>
    <string name="prompt_pgvusername">PhpGedView Username</string>
    <string name="title_activity_choose_family_member">Who is playing today?</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_match_game">MatchGameActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_choose_game">ChooseGameActivity</string>
    <string name="title_activity_scratch_game">ScratchGameActivity</string>
    <string name="title_activity_coloring_game">ColoringGameActivity</string>
    <string name="title_activity_heritage_dress_up">HeritageDressUpActivity</string>
    <string name="title_activity_choose_culture">ChooseCultureActivity</string>
    <string name="calculating_heritage">Calculating your heritage.
Please wait...</string>
    <string name="choose_culture">Choose a culture to dress up...</string>
    <string name="you_are_percent">You are %1$s percent from %2$s from your %3$s.</string>
    <string name="name_born_in">%1$s, was born in %2$s.</string>
    <string name="name_born_in_date">%1$s, was born in %2$s on %3$s.</string>
    <string name="father">Father</string>
    <string name="mother">Mother</string>
    <string name="husband">Husband</string>
    <string name="wife">Wife</string>
    <string name="grand">Grand</string>
    <string name="great">Great</string>
    <string name="son">Son</string>
    <string name="daughter">Daughter</string>
    <string name="brother">Brother</string>
    <string name="sister">Sister</string>
    <string name="inlaw">In-Law</string>
    <string name="parent">Parent</string>
    <string name="cousin">Cousin</string>
    <string name="aunt">Aunt</string>
    <string name="uncle">Uncle</string>
    <string name="niece">Niece</string>
    <string name="nephew">Nephew</string>
    <string name="unknown">Unknown</string>

    <string name="great3">Third</string>
    <string name="great4">Fourth</string>
    <string name="great5">Fifth</string>
    <string name="great6">Sixth</string>
    <string name="great7">Seventh</string>
    <string name="great8">Eighth</string>
    <string name="great9">Nineth</string>
    <string name="great10">Tenth</string>
    <string name="great11">Eleventh</string>
    <string name="great12">Twelvth</string>
    <string name="great13">Thirteenth</string>
    <string name="great14">Fourteenth</string>

    <string name="play">Play!</string>
    <string name="player_greeting">Hi</string>
    <string name="what_game">What would you like to play?</string>
    <string name="title_activity_choose_remote_service">ChooseRemoteService</string>
    <string name="choose_remote_service">Choose the online FamilyTree:</string>
    <string name="remote_service_explanation">LittleFamily connects to an online FamilyTree service to get its data.  You will be asked to login to your online FamilyTree through one of the provided services.  LittleFamily will then allow you to play and interact with your FamilyTree in a new and unique way.</string>
    <string name="choose_service_below">Choose from one of the supported online FamilyTree services below:</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_activity_puzzle_game">PuzzleGameActivity</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="relative_is_your">%1$s is your %2$s.</string>
    <string name="born_in">%1$s was born in %2$s.</string>
    <string name="born_on">%1$s was born on %2$s.</string>
    <string name="born_in_on">%1$s was born in %2$s on %3$s.</string>
    <string name="he">He</string>
    <string name="she">She</string>
    <string name="you">You</string>
    <string name="self">Self</string>
    <string name="you_are">You are %1$s.</string>
    <string name="you_born_in">You were born in %1$s.</string>
    <string name="you_born_on">You were born on %1$s.</string>
    <string name="you_born_in_on">You were born in %1$s on %2$s.</string>
    <string name="who_is_father">Find the father in this family?</string>
    <string name="who_is_mother">Find the mother in this family?</string>
    <string name="who_is_child">Find the child in this family?</string>

    <string name="title_activity_my_tree">My Tree</string>
    <string name="title_activity_bubble_pop">Bubble Pop Activity</string>
    <string name="adult_auth_explanation">Please enter the password for your online family tree account in order to continue.</string>
    <string name="adult_auth_explanation2">In order to continue, please enter the year %1$s was born.</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_person_search">PersonSearchActivity</string>
    <string name="given_name">Given Name</string>
    <string name="surname">Surname</string>
    <string name="person_search">Person Search</string>
    <string name="remote_tree_id">Remote Tree ID</string>
    <string name="search">Search</string>
    <string name="low_media">There are not many pictures on your online family tree.  The game is more fun with more pictures.  Please go to your online family tree and upload more photos.</string>
    <string name="title_activity_song">SongActivity</string>
    <string name="title_activity_parents_guide">Parent\'s Guide</string>
    <string name="title_full_tree">More Photos, More Fun!</string>
    <string name="guide_full_photo_tree">The family history data used in the games comes from an adult\'s online family tree. The more information--especially photos--that you add to your online tree, the more fun Little Family Tree will be for your child. This app can read the data from the online tree, but DOES NOT change the online tree.</string>
    <string name="title_welcome">Welcome!</string>
    <string name="guide_welcome_text">Little Family Tree engages young children with their personal family history through games and activities designed for their level. (Most of the games are fun for the kid in all of us.)</string>
    <string name="guide_engage_children">Playing with your child will give you the opportunity to strengthen family associations and enhance the experience through your personal memories and stories.</string>
    <string name="title_play_together">Play Together!</string>
    <string name="title_guide_choose_player">Choosing a Player</string>
    <string name="guide_choosing_player">The games and activities in Little Family Tree are centered around the person who is playing and their relationships to family members. You may choose a different player by tapping the player\'s picture on any screen.</string>
    <string name="title_guide_home">Home Activity</string>
    <string name="guide_home_activity">There is very little text used in the app, making it easy for even the youngest child to play.  The home screen is the hub of the game.  Return home anytime by using the home button at the top of every screen.</string>
    <string name="title_guide_follow_the_stars">Follow the Stars!</string>
    <string name="guide_follow_stars">Game portals are highlighted by twinkling stars on the home screen. Tap where the stars appear to enter a game. Yellow stars highlight free activities. Red stars highlight premium activities. You may try a premium activity three times; upgrade to continue playing premium games.</string>
    <string name="title_guide_settings">Settings</string>
    <string name="guide_settings">Parents may alter app settings through the manage settings button found on any screen.  You must enter the password for your online tree account in order to access the settings.  This prevents children from accidentally changing the settings.</string>
    <string name="guide_more_settings">From the settings you can manage your connection to your online family tree and change synchronization settings.  You can also choose to hide people from your online tree so that they do not show up in Little Family Tree.</string>
    <string name="ok_got_it">OK.  Got It!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="gender">Gender</string>
    <string name="relationship">Relationship</string>
    <string name="birthDate">Birth Date</string>
    <string name="birthYear">Birth Year</string>
    <string name="birthPlace">Birth Place</string>
    <string name="living">Living</string>
    <string name="nationality">Nationality</string>
    <string name="hasParents">Has Parents</string>
    <string name="hasSpouses">Has Spouses</string>
    <string name="hasChildren">Has Children</string>
    <string name="hasMedia">Has Pictures</string>
    <string name="lastSync">Last Sync</string>
    <string name="visible">Visible</string>
    <string name="close">Close</string>

    <string name="ask_for_help">Ask an adult for help.</string>
    <string name="title_activity_flying">Flying Activity</string>
    <string name="quiet_mode">Quiet Mode:</string>

    <string name="choose_a_song">Choose a song</string>
    <string name="choose_dancers">Place your dancers on stage</string>
    <string name="visit_website">Visit Our Website</string>
    <string name="visit_web_desc">Visit our website for more details, videos, and tutorials about the games in Little Family Tree.</string>
    <string name="title_guide_more">More Family History For Children</string>
    <string name="guide_kidsheritage">Teach your children more about their heritage with their own personal heritage book. Use coupon code LTFAMTR316 for free shipping!</string>
    <string name="title_activity_my_heritage_login">MyHeritage Login</string>

    <string name="low_tree_level">The game is still loading data.  As more data is loaded, the calculations will get more accurate.  Please try again in a few minutes.  You may continue to play while more data is loaded in the background.</string>
    <string name="title_activity_birthday_card">BirthdayCardActivity</string>
    <string name="decorate_a_card">Decorate a birthday card for </string>
    <string name="record_audio_instr">Tap the audio button to record the person\'s given name. Press the stop button to stop recording. Press the play button to hear the recorded name. Press the delete button to remove the recording.</string>
    <string name="remember_20">Remember me for the next 20 minutes</string>
    <string name="show_family">Show My Family</string>
    <string name="relative_rescue">Rescue your Relatives!</string>
    <string name="rescued">Rescued:</string>
    <string name="you_rescued">You rescued %1$d relatives!</string>
    <string name="processing">Processing </string>
    <string name="premium_game">This is a premium game.</string>
    <string name="tries_left">You have %1$d %2$s left.</string>
    <string name="title_activity_restore_purchases">RestorePurchases</string>
    <string name="validate_code">Enter premium redemption code</string>
    <string name="validate">Validate</string>
    <string name="already_premium">You already have a premium version.</string>
    <string name="back"><![CDATA[< Back]]></string>

</resources>
