<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
    >

    <Button
        style="@style/Base.Widget.AppCompat.Toolbar.Button.Navigation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:id="@+id/close_button"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView6"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/lock"
        android:layout_margin="5dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/premium_game"
        android:id="@+id/textView11"
        android:layout_gravity="center_horizontal"
        android:layout_margin="5dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/tries_left"
        android:id="@+id/tries_left_text"
        android:layout_gravity="center_horizontal"
        android:layout_margin="5dp"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="20dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/try_button"
            android:src="@drawable/try_button"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:layout_marginRight="20dp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buy_button"
            android:src="@drawable/buy_button"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:layout_marginLeft="20dp"/>
    </LinearLayout>

</LinearLayout>