<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:minHeight="400dp"
    android:minWidth="350dp">

    <Button
        style="@style/Base.Widget.AppCompat.Toolbar.Button.Navigation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:id="@+id/close_button"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lock_image"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/lock_25"
        android:layout_margin="5dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Premium Upgrade is Currently On Sale!"
        android:id="@+id/sale_text"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:maxLines="2"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="25dp"
        android:padding="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/premium_game"
        android:id="@+id/textView11"
        android:layout_gravity="center_horizontal"
        android:layout_margin="5dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/tries_left"
        android:id="@+id/tries_left_text"
        android:layout_gravity="center_horizontal"
        android:layout_margin="5dp"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="20dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/try_button"
            android:src="@drawable/try_button"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:layout_marginRight="20dp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buy_button"
            android:src="@drawable/buy_button_299"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:layout_marginLeft="20dp"/>
    </LinearLayout>

</LinearLayout>