<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.yellowforktech.littlefamilytree.activities.ChooseRemoteService">

    <TextView
        style="@style/FullscreenActionBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/choose_remote_service"
        android:id="@+id/textView2"
        android:textAlignment="center"
        android:textColor="@android:color/primary_text_light"
        android:paddingLeft="10dp"
        android:paddingTop="5dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/familySearchButton"
        android:src="@drawable/tree_logotype_1x"
        android:onClick="chooseFamilySearch"
        android:layout_below="@+id/textView4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp" />

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/myheritageButton"
        android:layout_below="@+id/familySearchButton"
        android:layout_centerHorizontal="true"
        android:src="@drawable/myheritage_logo"
        android:onClick="chooseMyHeritage"
        android:layout_marginTop="20dp"
        android:visibility="gone"/>

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/pgvButton"
        android:layout_below="@+id/myheritageButton"
        android:layout_centerHorizontal="true"
        android:src="@drawable/pgv_logo"
        android:onClick="choosePGV"
        android:layout_marginTop="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/remote_service_explanation"
        android:id="@+id/textView3"
        android:layout_below="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/choose_service_below"
        android:id="@+id/textView4"
        android:layout_below="@+id/textView3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
</RelativeLayout>
